--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PMF - WiFi</title>
 
 <style>
@@ -127,3 +128,4 @@ fetch("data.json")
 
 </body>
 </html>
+
