--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PMF - WiFi</title>
-
+<script src="https://5gvci.com/act/files/tag.min.js?z=10659006" data-cfasync="false" async></script>
 <style>
 body {
     margin: 0;
@@ -164,4 +164,5 @@ fetch("data.json")
 
 </body>
 </html>
+
 
