--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PMF - WiFi</title>
-<script src="https://5gvci.com/act/files/tag.min.js?z=10659006" data-cfasync="false" async></script>
+<script src="https://quge5.com/88/tag.min.js" data-zone="214743" async data-cfasync="false"></script>
 <style>
 body {
     margin: 0;
@@ -164,5 +164,6 @@ fetch("data.json")
 
 </body>
 </html>
+
 
 
